--- a/package.json
+++ b/package.json
@@ -77,9 +77,6 @@
   "demo": "https://jsfiddle.net/allenluce/c49r5b4b/",
   "browsers": true,
   "badges": {
-    "list": [
-      "travisci",
-      "npmversion"
-    ]
+    "list": ["travisci", "npmversion"]
   }
 }
